--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -44,6 +44,7 @@ $enable-rounded: false !default;
 $body-color: $gray-800 !default;
 
 // Fonts
+$font-family-sans-serif: 'Montserrat', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-size-base: 0.9375rem !default;
 $headings-font-weight: 300 !default;
 
